public/stylesheets/styles.css
:root {
  --main-color: beige;
  --white: #eee;
  --black: #333;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
}

main {
  display: flex;
}

/* LAYOUT PAGE*/
/* #region */
/* Style the hamburger menu */
.hamburger-menu {
  position: fixed;
  height: 50px;
  top: 1rem;
  right: 1rem;
  z-index: 1001;
  cursor: pointer;
  display: none; /* Hide by default */
}

.hamburger-icon {
  font-size: 2rem;
  color: var(--black);
}

/* Show the sidebar when active */
.sidebar.active {
  display: block;
}

/* Style the sidebar content */
.sidebar .content-list ul {
  list-style-type: none;
  padding: 0;
}

.sidebar .content-list h3 {
  margin-top: 0;
}

.sidebar .content-list li {
  margin: 0.5rem 0;
}

.sidebar .content-list a {
  color: var(--white);
  text-decoration: none;
}

.sidebar .sidebar-footer {
  position: absolute;
  bottom: 1rem;
  left: 1rem;
}

.content {
  width: 100vw;
  height: 100vh;
  overflow-y: auto; /* Make only the content scrollable */
  padding-left: 1.5rem;
  background-color: var(--white);
}

/* Media query for larger screens */
@media (min-width: 769px) {
  .hamburger-menu {
    display: none; /* Hide hamburger menu on larger screens */
  }

  .sidebar {
    display: flex; /* Show sidebar on larger screens */
    justify-content: space-between;
    flex-direction: column;
    position: static;
    width: 15%;
    max-width: 200px;
    height: 100vh;
    background-color: var(--main-color);
    padding-left: 1rem;
    box-shadow: none;
  }

  .sidebar .content-list ul {
    display: block; /* Ensure ul elements are block */
    margin-top: 2rem;
  }

  .sidebar .content-list li {
    display: list-item; /* Ensure li elements are list items */
    margin: 0.5rem 0; /* Add margin for spacing */
  }

  .sidebar .content-list a {
    color: inherit; /* Reset link color */
  }

  .sidebar .sidebar-footer {
    position: static; /* Reset position */
  }
}

/* Media query for smaller screens */
@media (max-width: 768px) {
  main {
    flex-direction: column; /* Stack sidebar on top of content */
  }

  .hamburger-menu {
    display: block; /* Show hamburger menu on smaller screens */
  }

  .sidebar {
    display: none; /* Hide sidebar by default on smaller screens */
    position: fixed;
    top: 0;
    left: 0;
    width: 250px;
    height: 100%;
    max-height: 450px;
    background-color: var(--black);
    color: var(--white);
    padding: 1rem;
    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
    z-index: 1000;
  }

  .content {
    width: 100%;
    height: auto; /* Adjust height to fit content */
    padding-left: 0;
  }

  h1 {
    margin-left: 1rem;
  }
}
/* #endregion */

/* LIST PAGES */
/* #region */
.item-list {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  gap: 1rem;
  justify-content: space-evenly;
  align-items: center;
}

.item-card {
  list-style-type: none;
  margin-bottom: 1rem;
  flex: 1 1 calc(45% - 1rem);
  max-width: calc(45% - 1rem);
  box-sizing: border-box; /* Include padding and border in the element's total width and height */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  padding: 1rem;
  border-radius: 10px; /* Rounded edges */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow */
  background-color: var(--main-color); /* Ensure the background is white */
  transition: transform 0.2s; /* Smooth transition for hover effect */
  height: 500px; /* Fixed height */
  overflow-y: auto; /* Make content scrollable if it exceeds the fixed height */
  scrollbar-width: none; /* For Firefox */
  -ms-overflow-style: none; /* For Internet Explorer and Edge */
}

.item-card img {
  padding: 0.5rem;
  border: 2px solid #ccc;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s, box-shadow 0.3s;
}

.item-card img:hover {
  transform: scale(1.05);
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

@media (max-width: 768px) {
  .item-list {
    flex-direction: column;
    align-items: center; /* Center the items */
  }

  .item-card {
    flex: 1 1 90%; /* Take up 90% of the parent width on smaller screens */
    max-width: 90%; /* Ensure the card doesn't exceed 90% width */
    width: 90%; /* Ensure the card has a consistent width */
    box-sizing: border-box; /* Include padding and border in the element's total width and height */
  }
}

.item-card a {
  text-decoration: none;
  color: var(--black);
}

.item-card h2 {
  margin: 0;
  font-size: 1.5rem;
}

.item-card ul {
  text-align: left;
}

.item-card p {
  margin: 0;
}

.genre-list-name {
  font-size: x-large;
}

.director-container {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin: 0.25rem;
}

.director-container p {
  margin: 0; /* Remove default margin */
}

.director-container a p {
  display: inline; /* Ensure the director names are inline */
}

.resized-image {
  width: 150px;
  height: 225px;
  object-fit: cover;
  margin: 1rem;
}

@media (max-width: 768px) {
  .item-card {
    flex: 1 1 100%;
  }
}
.resized-image-detail {
  width: 300px;
  height: 450px;
  object-fit: cover;
}

.genre-info {
  list-style: none;
  font-size: larger;
}

.genre-info a {
  font-style: normal;
  text-decoration: none;
}
/* #endregion */

/* DETAIL PAGES */
/* #region */
.item-detail {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  padding-bottom: 1rem;
  width: 95%;
  background-color: var(--main-color);
  border-radius: 10px; /* Rounded edges */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow */
}

.item-detail img {
  margin-top: 0.5rem;
  padding: 0.5rem;
  border: 2px solid #ccc;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s, box-shadow 0.3s;
}

.item-detail img:hover {
  transform: scale(1.05);
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

.item-detail a {
  text-decoration: none;
}

.item-detail h1 {
  margin-bottom: 0;
}

.age {
  margin: 0;
}

.detail-info {
  padding: 0.5rem 1rem;
  margin: 0.5rem 0;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #f0f0f0;
  transition: background-color 0.3s, transform 0.3s;
}

.detail-info:hover {
  background-color: #e0e0e0;
  transform: scale(1.05);
}

.detail-info a {
  color: var(--black);
}

.add-cast {
  margin-top: 1rem;
  padding: 1rem;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #f9f9f9;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.add-cast form {
  display: flex;
  flex-direction: column;
  width: 95%;
  align-items: center;
}
.add-cast label {
  display: block;
  margin-bottom: 0.5rem;
  margin-top: 1rem;
}

.add-cast select {
  width: 100%;
  padding: 0.5rem;
  margin-bottom: 1rem;
  border: 1px solid #ccc;
  border-radius: 5px;
}

.add-cast button {
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 5px;
  background-color: var(--black);
  color: white;
  cursor: pointer;
}

.add-cast button:hover {
  background-color: var(--main-color);
  color: var(--black);
}

.card-buttons {
  margin-top: 1rem;
  display: flex;
  gap: 1rem;
  justify-content: space-between;
}

.card-buttons button {
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 5px;
  background-color: #007bff;
  color: white;
  cursor: pointer;
}

.card-buttons button:hover {
  background-color: #0056b3;
}

.card-buttons a button {
  background-color: #28a745;
}

.card-buttons a button:hover {
  background-color: #218838;
}

@media (max-width: 768px) {
  .item-detail {
    margin-top: 60px;
    margin-left: 0.5rem;
    margin-right: 0.5rem;
  }
}
/* #endregion */

/* FORM PAGES */
/* #region */
.create-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  padding-bottom: 1rem;
  width: 95%;
  background-color: var(--main-color);
  border-radius: 10px; /* Rounded edges */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow */
}

.create-page h1 {
  margin-bottom: 1.5rem; /* Space below the heading */
}

.create-page form {
  width: 100%;
  max-width: 600px; /* Limit the form width */
  display: flex;
  flex-direction: column;
  gap: 1rem; /* Space between form elements */
}

.create-page label {
  font-weight: bold;
  margin-bottom: 0.5rem; /* Space below the label */
}

.create-page input,
.create-page select {
  width: 100%;
  padding: 0.5rem;
  border: 1px solid var(--white);
  border-radius: 5px;
  box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
}

.create-page button {
  padding: 0.75rem;
  background-color: #007bff;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 1rem;
}

.create-page button:hover {
  background-color: #0056b3; /* Darker blue on hover */
}
/* #endregion */

